Aggiornate classi per essere compatibili con le versioni inferiori di JDK 21!